--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,3 +26,14 @@ li a {
     align-items: center;
 }
 
+.link{
+    font-weight: 700;;
+    color: #7A238A;
+}
+
+.link:hover{
+    text-decoration: none;
+    background-color: #7A238A;
+    color: #f3e8f0;
+}
+
