--- a/css/style.css
+++ b/css/style.css
@@ -9953,4 +9953,15 @@ li a {
   align-items: center;
 }
 
+.link {
+  font-weight: 700;
+  color: #7A238A;
+}
+
+.link:hover {
+  text-decoration: none;
+  background-color: #7A238A;
+  color: #f3e8f0;
+}
+
 /*# sourceMappingURL=style.css.map */
